# rbelote

./: Cargo.toml  TODO  clippy.toml
src/: belote.rs  bidding.rs  card.rs  coinche.rs  constants.rs  contract.rs  deck.rs  distribution.rs  errors.rs  game.rs  hand.rs  hands.rs  helpers.rs  in_game.rs  initial.rs  main.rs  order.rs  player.rs  players.rs  playing.rs  points.rs  position.rs  stack.rs  state.rs  team.rs  traits.rs  turn.rs
