[package]
name = "rbelote"
default-run = "rbelote"
version = "0.2.0"
authors = ["Adrien Pensart <crunchengine@gmail.com>"]
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
itertools = "0.14"
thiserror = "2.0"
inquire = "0.7"
clap = { version = "4.0", features = ["derive"] }
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
color-eyre = "0.6.2"
colored = "2.1.0"
derive-new = "0.7"
typestate = "0.8.0"
tinyvec = "1.6.0"
strum = "0.26.2"
strum_macros = "0.26.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
must_use_candidate = "allow"
missing_errors_doc = "allow"
